--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body{
-  background-image: url(./images/Untitled\ design-3.png);
-  background-size: cover;
+ background-color: powderblue
 }
 
 input{
